--- a/styles.css
+++ b/styles.css
@@ -118,6 +118,8 @@ a:hover {
 
 }
 
+
+
 .container-two {
     display: flex;
     justify-content:center;
@@ -136,6 +138,77 @@ a:hover {
     font-size: 18px;
 }
 
+.section3 {
+    padding-left: 400px;
+    padding-right: 400px;
+    padding-top: 100px;
+    padding-bottom: 100px;
+    background-color: #E5E7EB;
+}
+
+.quote {
+    font-style:italic;
+    color: #1F2937;
+    font-size: 36px;
+    font-weight: 300;
+    text-align: center;
+    margin-bottom: 0;
+}
+
+.author {
+    text-align: end;
+}
+
+.section4{
+    padding: 100px;
+}
+
+.blue {
+    background-color: #3882F6;
+    border-radius: 12px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-right: 70px;
+    padding-left: 70px;
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.signup2 {
+    border: 3px solid white;
+    border-radius: 10px;
+    padding-left: 20px;
+    padding-right:20px;
+    padding-top:8px;
+    padding-bottom:8px;
+    font-family: Helvetica, Arial, Times;
+    font-weight: 800;
+    background-color: #3882F6;
+    color: white;
+    height: 40px;
+
+
+}
+
+.hero.callaction {
+    font-size: 24px;
+    margin-bottom: 0;
+}
+
+.hero.signup3 {
+    font-size:14px;
+    margin-top:0;
+    margin-bottom:24px;
+    color: #E5E7EB
+}
+
+.copyright {
+    background-color: #1F2937;
+    color: #E5E7EB;
+    text-align: center;
+    padding: 20px;
+}
 
 
 
