Update font for copyright section

--- a/styles.css
+++ b/styles.css
@@ -208,6 +208,9 @@ a:hover {
     color: #E5E7EB;
     text-align: center;
     padding: 20px;
+    font-family: Helvetica, Arial, Times;
+
+    
 }
 
 
